--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                          ng-repeat="item in items"
                          ng-style="{backgroundColor: item.color}">
                         {{item.name}}, {{item.profession}}
-                        <div ng-include="included-file.html"></div>
+                        <div ng-include="'included-file.html'"></div>
                     </div>
                 </div>
                 <span ng-repeat="item in items" ng-style="{color: item.color}">
